--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo": "~50.0.14",
     "expo-av": "^13.10.6",
     "expo-constants": "~15.4.5",
+    "expo-document-picker": "^12.0.1",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
@@ -21,6 +22,7 @@
     "react-native": "0.73.6",
     "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.2.2",
+    "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-url-polyfill": "^2.0.0"
